--- a/index.html
+++ b/index.html
@@ -17,20 +17,17 @@
       <header>
         <h1>Slides</h1>
         <p></p>
-
         <p class="view"><a href="https://github.com/emanjavacas/slides">View the Project on GitHub <small>emanjavacas/slides</small></a></p>
-
-
         <ul>
-          <li><a href="https://github.com/emanjavacas/slides/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/emanjavacas/slides/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/emanjavacas/slides">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
         <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
+	  <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+	<ul>
+	  <li><a href="http://emanjavacas.github.io/slides/catalan-spanish.html">Urbane Prozesse</a> Catalan spanish</li>
+	</ul>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/emanjavacas">emanjavacas</a></p>
