--- a/catalan_spanish.html
+++ b/catalan_spanish.html
@@ -9,17 +9,23 @@
 <link rel="stylesheet" href="./css/reveal.min.css"/>
 <link rel="stylesheet" href="./css/theme/beige.css" id="theme"/>
 <link rel="stylesheet" href="./extra.css"/>
+
+<!-- <link rel="stylesheet" href="./css/print/pdf.css" type="text/css" media="print"> -->
+<!-- <meta name="description" content="Getting started with Clojure"> -->
+
+
+
 <!-- If the query includes 'print-pdf', include the PDF print sheet -->
-<script>
-    if( window.location.search.match( /print-pdf/gi ) ) {
-        var link = document.createElement( 'link' );
-        link.rel = 'stylesheet';
-        link.type = 'text/css';
-        link.href = './css/print/pdf.css';
-        document.getElementsByTagName( 'head' )[0].appendChild( link );
-    }
-</script>
-<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+<!-- <script> -->
+<!--     if( window.location.search.match( /print-pdf/gi ) ) { -->
+<!--         var link = document.createElement( 'link' ); -->
+<!--         link.rel = 'stylesheet'; -->
+<!--         link.type = 'text/css'; -->
+<!--         link.href = './css/print/pdf.css'; -->
+<!--         document.getElementsByTagName( 'head' )[0].appendChild( link ); -->
+<!--     } -->
+<!-- </script> -->
+<!-- <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script> -->
 </head>
 <body>
 <div class="reveal">
