--- a/catalan_spanish.html
+++ b/catalan_spanish.html
@@ -122,7 +122,7 @@ ODER <b>Übergangsdialekte</b> wie bsw.
 <section id="sec-2-2-1"  data-background="white">
 
 <h4>Spanische Dialekte</h4>
-<img src="./dialekten.png" alt="dialekten.png" />
+<img src="./images/dialekten.png" alt="dialekten.png" />
 </section>
 
 </section>
@@ -174,7 +174,7 @@ die korrekte Variante rationalisiert.
 <section id="sec-2-4-2"  data-background="white">
 
 <h4>Beispiel franquistischer Propaganda</h4>
-<img src="./caballero.jpg" alt="caballero.jpg" />
+<img src="./images/caballero.jpg" alt="caballero.jpg" />
 
 <aside class="notes">
 <p>
@@ -209,7 +209,7 @@ Dazu Robert E. Vann (2002)
 <section id="sec-3-1"  data-background="white">
 
 <h3>Phonologie</h3>
-<img src="./phonologie.jpg" alt="phonologie.jpg" />
+<img src="./images/phonologie.jpg" alt="phonologie.jpg" />
 </section>
 
 </section>
