--- a/catalan_spanish.html
+++ b/catalan_spanish.html
@@ -9,24 +9,18 @@
 <link rel="stylesheet" href="./css/reveal.min.css"/>
 <link rel="stylesheet" href="./css/theme/beige.css" id="theme"/>
 <link rel="stylesheet" href="./extra.css"/>
-
-<link rel="stylesheet" href="./css/print/pdf.css" type="text/css" media="print">
-<meta name="description" content="Catalan spanish">
-</head>
-
-
-
 <!-- If the query includes 'print-pdf', include the PDF print sheet -->
-<!-- <script> -->
-<!--     if( window.location.search.match( /print-pdf/gi ) ) { -->
-<!--         var link = document.createElement( 'link' ); -->
-<!--         link.rel = 'stylesheet'; -->
-<!--         link.type = 'text/css'; -->
-<!--         link.href = './css/print/pdf.css'; -->
-<!--         document.getElementsByTagName( 'head' )[0].appendChild( link ); -->
-<!--     } -->
-<!-- </script> -->
-<!-- <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script> -->
+<script>
+    if( window.location.search.match( /print-pdf/gi ) ) {
+        var link = document.createElement( 'link' );
+        link.rel = 'stylesheet';
+        link.type = 'text/css';
+        link.href = './css/print/pdf.css';
+        document.getElementsByTagName( 'head' )[0].appendChild( link );
+    }
+</script>
+<link href='http://fonts.googleapis.com/css?family=Source+Code+Pro' rel='stylesheet' type='text/css'>
+</head>
 <body>
 <div class="reveal">
 <div class="slides">
@@ -35,7 +29,6 @@
 <h2>Enrique Manjavacas</h2>
 <h2><a href="mailto:enrique.manjavacas@gmail.com">enrique.manjavacas@gmail.com</a></h2>
 <h2></h2></section>
-
 <section>
 <h2>Table of Contents</h2><ul>
 <li>
@@ -45,10 +38,10 @@
 <a href="#sec-2">Einführung</a>
 </li>
 <li>
-<a href="#sec-3">Wichtigste Merkmale</a>
+<a href="#sec-3">Demographie</a>
 </li>
 <li>
-<a href="#sec-4">Demographie</a>
+<a href="#sec-4">Wichtigste Merkmale</a>
 </li>
 <li>
 <a href="#sec-5">Studie zur pragmatischen Interferenz (Robert E. Vann.)</a>
@@ -58,16 +51,16 @@
 
 <section id="sec-1" >
 
-<h2>Motivation</h2>
+<h2><span class="section-number-2">1</span> Motivation</h2>
 </section>
 <section id="sec-2" >
 
-<h2>Einführung</h2>
+<h2><span class="section-number-2">2</span> Einführung</h2>
 </section>
 <section>
 <section id="sec-2-1" >
 
-<h3>Einige Fakten über die linguistische Geschichte Spaniens</h3>
+<h3><span class="section-number-3">2.1</span> Einige Fakten über die linguistische Geschichte Spaniens</h3>
 <ul class="org-ul">
 <li class="fragment highlight-blue">700 Jahre Reconquista durch das Königktum Kastilliens führt
 Kastillianisch zur Machtposition.
@@ -82,46 +75,49 @@ und Galizisch, Mozarabisch stirbt aber aus.
 </section>
 <section id="sec-2-1-1" >
 
-<h4>Imposition des Kastillianischen in Katalonien:</h4>
-<ul class="org-ul">
-<li class="fragment highlight-blue"><span class="underline"><b>ab dem 15. Jhd</b></span> durch die kastillianische Kröne
-</li>
-</ul>
-<ul class="org-ul">
-<li class="fragment highlight-blue"><span class="underline"><b>1711</b></span> im Zuge des Erbfolgekriegs      
-</li>
-</ul>
-<ul class="org-ul">
-<li class="fragment highlight-blue"><span class="underline"><b>ab 1939</b></span> im Zuge der Dikatur Franco's      
-</li>
-</ul>
+<h4><span class="section-number-4">2.1.1</span> Imposition des Kastillianischen in Katalonien:</h4>
+<p class="fragment highlight-blue">
+-&gt; <b>ab dem 15. Jhd</b> durch die kastillianische Krone.
+</p>
+
+<p class="fragment highlight-blue">
+-&gt; <b>1711</b> im Zuge des Erbfolgekriegs      
+</p>
+
+<p class="fragment highlight-blue">
+-&gt; <b>ab 1939</b> im Zuge der Dikatur Franco's      
+</p>
 </section>
 
 </section>
 <section>
 <section id="sec-2-2" >
 
-<h3>Ideologie und Dialektologie.</h3>
+<h3><span class="section-number-3">2.2</span> Ideologie und Dialektologie.</h3>
 <p>
 Vicente Zamora (1989) betrachtet nur als Dialekt
 <b>weniger prominente Sprachen</b> wie
 </p>
-<p class="fragment highlight-blue grow">
+<p class="fragment highlight-blue">
 -&gt; <i>Mozarabisch</i>, <i>Leonesisch</i>, <i>Aragonesisch</i>
 </p>
 <p>
-ODER <b>Übergangsdialekte</b> wie bsw.
+ODER 
 </p>
-<p class="fragment highlight-blue grow">
+
+<p>
+<b>Übergangsdialekte</b> wie bsw.
+</p>
+<p class="fragment highlight-blue">
 -&gt; <i>Extremadura-Dialekt</i>: Übergang zwischen Leonesisch und Andalusisch
 </p>
-<p class="fragment highlight-blue grow">
+<p class="fragment highlight-blue">
 -&gt; <i>Murcia-Dialekt</i>: Übergang zwischen Aragonesisch und Andalusisch mit katalonischen Merkmalen
 </p>
 </section>
 <section id="sec-2-2-1"  data-background="white">
 
-<h4>Spanische Dialekte</h4>
+<h4><span class="section-number-4">2.2.1</span> Spanische Dialekte</h4>
 <img src="./images/dialekten.png" alt="dialekten.png" />
 </section>
 
@@ -129,7 +125,7 @@ ODER <b>Übergangsdialekte</b> wie bsw.
 <section>
 <section id="sec-2-3" >
 
-<h3>Was ist das Katalanische Spanisch?</h3>
+<h3><span class="section-number-3">2.3</span> Was ist das Katalanische Spanisch?</h3>
 <p>
 Die klare Antwort ist: <span class="underline">Kontaktdialekt zwischen Kastillianisch (oder</span>
 <span class="underline">Aragonesisch) mit Katalonischem Einfluss</span>.
@@ -148,20 +144,20 @@ eigenständiger Dialekt betrachtet bzw. unerforscht.
 <section>
 <section id="sec-2-4" >
 
-<h3>Gründe hierfür sind (u.A):</h3>
+<h3><span class="section-number-3">2.4</span> Gründe hierfür sind (u.A):</h3>
 <p class="fragment highlight-blue">
--&gt; Wirkung der <span class="underline">franquistischen Sprachplanung</span> (keine Einschulung in Catalan):
+-&gt; <b>Wirkung</b> der <span class="underline">franquistischen Sprachplanung</span> (keine Einschulung in Catalan):
 weniger Salienz des Katalanischen Spanischen.
 </p>
 <p class="fragment highlight-blue">
--&gt; <span class="underline">Bias</span>: Wahrnehmung als gebrochenes L2-Spanisch. Kastellianisch wird asl
+-&gt; <b>Bias</b>: Wahrnehmung als gebrochenes L2-Spanisch. Kastellianisch wird asl
 die korrekte Variante rationalisiert.
 </p>
 
 </section>
 <section id="sec-2-4-1" >
 
-<h4>Beispiel: Philologen über Katalanisch-Spanisch</h4>
+<h4><span class="section-number-4">2.4.1</span> Beispiel: Philologen über Katalanisch-Spanisch</h4>
 <p>
 -&gt;  "<i>Die katalanische Aussprache von Kastillianisch ist eine Verstellung der Diction</i>" Badia (1969)
 </p>
@@ -173,7 +169,7 @@ die korrekte Variante rationalisiert.
 </section>
 <section id="sec-2-4-2"  data-background="white">
 
-<h4>Beispiel franquistischer Propaganda</h4>
+<h4><span class="section-number-4">2.4.2</span> Beispiel franquistischer Propaganda</h4>
 <img src="./images/caballero.jpg" alt="caballero.jpg" />
 
 <aside class="notes">
@@ -187,7 +183,7 @@ Das ist patriotisch zu sein. Lang lebe Spanien die Disziplin und die Cervantes's
 </section>
 <section id="sec-2-4-3" >
 
-<h4>Veränderung der Einstellungen</h4>
+<h4><span class="section-number-4">2.4.3</span> Veränderung der Einstellungen</h4>
 <p>
 Der Umbruch mit dieser Situation vollzieht sich, in dem angenommen wird, dass Kataloner nicht
 Kastillianisch sondern Standard Spanisch sprechen. 
@@ -203,31 +199,40 @@ Dazu Robert E. Vann (2002)
 </section>
 <section id="sec-3" >
 
-<h2>Wichtigste Merkmale</h2>
+<h2><span class="section-number-2">3</span> Demographie</h2>
 </section>
 <section>
-<section id="sec-3-1"  data-background="white">
+<section id="sec-3-1" >
 
-<h3>Phonologie</h3>
-<img src="./images/phonologie.jpg" alt="phonologie.jpg" />
+<h3><span class="section-number-3">3.1</span> Bevölkerung</h3>
 </section>
+<section id="sec-3-1-1"  data-background="white">
 
-</section>
-<section>
-<section id="sec-3-2" >
-
-<h3></h3>
-</section>
+<h4><span class="section-number-4">3.1.1</span> Einwohnerzahl</h4>
+<img src="./images/einwohner.png" alt="einwohner.png" />
 
 </section>
-<section id="sec-4" >
+<section id="sec-3-1-2"  data-background="white">
 
-<h2>Demographie</h2>
+<h4><span class="section-number-4">3.1.2</span> Entwicklung der Bevölkerung</h4>
+<img src="./images/nationalitat.png" alt="nationalitat.png" />
+
 </section>
-<section>
-<section id="sec-4-1" >
+<section id="sec-3-1-3"  data-background="white">
 
-<h3>Kenntnisse des Katalanischen in Barcelona</h3>
+<h4><span class="section-number-4">3.1.3</span> Migration</h4>
+<img src="./images/migrationsbewegungen.png" alt="migrationsbewegungen.png" />
+
+</section>
+<section id="sec-3-1-4"  data-background="white">
+
+<h4><span class="section-number-4">3.1.4</span> Bevölkerung nach Geburtsort</h4>
+<img src="./images/geburtsort.png" alt="geburtsort.png" />
+
+</section>
+<section id="sec-3-1-5" >
+
+<h4><span class="section-number-4">3.1.5</span> Kenntnisse des Katalanischen in Barcelona</h4>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -319,10 +324,127 @@ Dazu Robert E. Vann (2002)
 </tbody>
 </table>
 </section>
+
+</section>
+<section id="sec-4" >
+
+<h2><span class="section-number-2">4</span> Wichtigste Merkmale</h2>
+</section>
+<section>
+<section id="sec-4-1"  data-background="white">
+
+<h3><span class="section-number-3">4.1</span> Phonologie</h3>
+<img src="./images/phonologie.jpg" alt="phonologie.jpg" />
+</section>
+
+</section>
+<section>
+<section id="sec-4-2" >
+
+<h3><span class="section-number-3">4.2</span> Lexik</h3>
+<ul class="org-ul">
+<li>Entlehnungen (lexikalischer Transfer)
+</li>
+<li>"Calque"
+</li>
+<li>semantischer Transfer
+</li>
+</ul>
+
+</section>
+<section id="sec-4-2-1" >
+
+<h4><span class="section-number-4">4.2.1</span> Entlehnungen</h4>
+<table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
+
+
+<colgroup>
+<col  class="left" />
+
+<col  class="left" />
+</colgroup>
+<tbody>
+<tr>
+<td class="left">&#xa0;</td>
+<td class="left">Deutsch</td>
+</tr>
+
+<tr>
+<td class="left"><i>desenvolupar</i> vs es. <i>desenrrollar</i></td>
+<td class="left">auswickeln</td>
+</tr>
+
+<tr>
+<td class="left"><i>parlar</i>  vs es. <i>hablar</i></td>
+<td class="left">sprechen</td>
+</tr>
+
+<tr>
+<td class="left"><i>espardeñas</i>  vs es. <i>alpargatas</i></td>
+<td class="left">Espadrilles</td>
+</tr>
+
+<tr>
+<td class="left"><i>esplai</i></td>
+<td class="left">Pionier-zentrum</td>
+</tr>
+
+<tr>
+<td class="left"><i>conversa</i> vs es. <i>conversación</i></td>
+<td class="left">Gespräch</td>
+</tr>
+</tbody>
+</table>
+
+<p>
+-&gt; "<i>hacen faelr los interesees comunes a todo el proletariado</i>
+<i>independientemente de la nacionalidad y que en las diferentes fades del desenvolupamiento</i>"
+</p>
+
+<p>
+-&gt; "<i>De ahí nos hemos ido Raquel y Jose con los nenes al esplai</i>"
+</p>
+
+</section>
+<section id="sec-4-2-2" >
+
+<h4><span class="section-number-4">4.2.2</span> Calques (Strukturübertragung aus der besser beherrschten Sprache)</h4>
+<table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
+
+
+<colgroup>
+<col  class="left" />
+
+<col  class="left" />
+</colgroup>
+<tbody>
+<tr>
+<td class="left">&#xa0;</td>
+<td class="left">Deutsch</td>
+</tr>
+
+<tr>
+<td class="left"><i>ahí hay</i> vs es. <i>hay</i></td>
+<td class="left">es gibt</td>
+</tr>
+
+<tr>
+<td class="left"><i>tiene a ver</i> vs es. <i>tiene que ver</i></td>
+<td class="left">es hat zu tun mit&#x2026;</td>
+</tr>
+
+<tr>
+<td class="left">&#xa0;</td>
+<td class="left">&#xa0;</td>
+</tr>
+</tbody>
+</table>
+</section>
+
 </section>
 <section id="sec-5" >
 
-<h2>Studie zur pragmatischen Interferenz (Robert E. Vann.)</h2>
+<h2><span class="section-number-2">5</span> Studie zur pragmatischen Interferenz (Robert E. Vann.)</h2>
 </section>
 </div>
 </div>
@@ -331,7 +453,6 @@ Dazu Robert E. Vann (2002)
 <script src="./js/reveal.min.js"></script>
 
 <script>
-        		
 // Full list of configuration options available here:
 // https://github.com/hakimel/reveal.js#configuration
 Reveal.initialize({
@@ -344,8 +465,8 @@ slideNumber: true,
 rollingLinks: true,
 keyboard: true,
 overview: true,
-width: 1200,
-height: 800,
+width: 1400,
+height: 900,
 margin: 0.10,
 minScale: 0.50,
 maxScale: 2.50,
@@ -356,7 +477,6 @@ transitionSpeed: 'default',
 
 // Optional libraries used to extend on reveal.js
 dependencies: [
- { src: './lib/js/classList.js', condition: function() { return !document.body.classList; } },
  { src: './plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
  { src: './plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
  { src: './plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
