--- a/catalan_spanish.html
+++ b/catalan_spanish.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <title>Barcelona Spanisch</title>
-<meta name="author" content="(Enrique Manjavacas)"/>
+<meta name="author" content="(Dozent: Uli Reich)"/>
 
 <link rel="stylesheet" href="./css/reveal.min.css"/>
 <link rel="stylesheet" href="./css/theme/beige.css" id="theme"/>
@@ -26,41 +26,67 @@
 <div class="slides">
 <section>
 <h1>Barcelona Spanisch</h1>
-<h2>Enrique Manjavacas</h2>
-<h2><a href="mailto:enrique.manjavacas@gmail.com">enrique.manjavacas@gmail.com</a></h2>
+<h2>Dozent: Uli Reich</h2>
+<h2><a href="mailto:Urbane Prozesse">Urbane Prozesse</a></h2>
 <h2></h2></section>
 <section>
 <h2>Table of Contents</h2><ul>
 <li>
-<a href="#sec-1">Motivation</a>
+<a href="#sec-1">Sprachenkonflikt</a>
 </li>
 <li>
-<a href="#sec-2">Einführung</a>
+<a href="#sec-2">Demographie</a>
 </li>
 <li>
-<a href="#sec-3">Demographie</a>
+<a href="#sec-3">Wichtigste Merkmale</a>
 </li>
 <li>
-<a href="#sec-4">Wichtigste Merkmale</a>
-</li>
-<li>
-<a href="#sec-5">Studie zur pragmatischen Interferenz (Robert E. Vann.)</a>
+<a href="#sec-4">Studie zur pragmatischen Interferenz (Robert E. Vann.)</a>
 </li>
 </ul>
 </section>
 
 <section id="sec-1" >
 
-<h2><span class="section-number-2">1</span> Motivation</h2>
-</section>
-<section id="sec-2" >
-
-<h2><span class="section-number-2">2</span> Einführung</h2>
+<h2><span class="section-number-2">1</span> Sprachenkonflikt</h2>
 </section>
 <section>
-<section id="sec-2-1" >
+<section id="sec-1-1" >
 
-<h3><span class="section-number-3">2.1</span> Einige Fakten über die linguistische Geschichte Spaniens</h3>
+<h3><span class="section-number-3">1.1</span> Hintergrund</h3>
+<p class="fragment fade-in">
+-&gt; unoffiziele Referenda 2009-2011 (nidriege Wahlbeteiligung)
+</p>
+
+<p class="fragment fade-in">
+-&gt; Demonstrationen 11. September - Diada
+</p>
+
+<p class="fragment fade-in">
+-&gt; 5. November 2012: Vorgezogene Neuwahl
+</p>
+
+<p class="fragment fade-in">
+-&gt; 23. Januar 2013: "Erklärung der Souveranität" - verbindliches Referendum vorgesehen.
+</p>
+
+<p class="fragment fade-in">
+-&gt; 25. März 2014: Verfassungsgericht erklärt es null.
+</p>
+
+<p class="fragment fade-in">
+Mehr Info unter: 
+</p>
+<p class="fragment fade-in">
+<a href="http:en.wikipedia.org/wiki/Catalan_self-determination_referendum">Referendum um die Unabhängigkeit</a>
+</p>
+</section>
+
+</section>
+<section>
+<section id="sec-1-2" >
+
+<h3><span class="section-number-3">1.2</span> Geschichtliche Verhältnisse</h3>
 <ul class="org-ul">
 <li class="fragment highlight-blue">700 Jahre Reconquista durch das Königktum Kastilliens führt
 Kastillianisch zur Machtposition.
@@ -73,9 +99,9 @@ und Galizisch, Mozarabisch stirbt aber aus.
 </li>
 </ul>
 </section>
-<section id="sec-2-1-1" >
+<section id="sec-1-2-1" >
 
-<h4><span class="section-number-4">2.1.1</span> Imposition des Kastillianischen in Katalonien:</h4>
+<h4><span class="section-number-4">1.2.1</span> Das Kastillianische in Katalonien:</h4>
 <p class="fragment highlight-blue">
 -&gt; <b>ab dem 15. Jhd</b> durch die kastillianische Krone.
 </p>
@@ -91,9 +117,9 @@ und Galizisch, Mozarabisch stirbt aber aus.
 
 </section>
 <section>
-<section id="sec-2-2" >
+<section id="sec-1-3" >
 
-<h3><span class="section-number-3">2.2</span> Ideologie und Dialektologie.</h3>
+<h3><span class="section-number-3">1.3</span> Die Erforschung der iberischen Dialekte</h3>
 <p>
 Vicente Zamora (1989) betrachtet nur als Dialekt
 <b>weniger prominente Sprachen</b> wie
@@ -115,17 +141,15 @@ ODER
 -&gt; <i>Murcia-Dialekt</i>: Übergang zwischen Aragonesisch und Andalusisch mit katalonischen Merkmalen
 </p>
 </section>
-<section id="sec-2-2-1"  data-background="white">
+<section id="sec-1-3-1"  data-background="white">
 
-<h4><span class="section-number-4">2.2.1</span> Spanische Dialekte</h4>
+<h4><span class="section-number-4">1.3.1</span> Spanische Dialekte</h4>
 <img src="./images/dialekten.png" alt="dialekten.png" />
-</section>
 
 </section>
-<section>
-<section id="sec-2-3" >
+<section id="sec-1-3-2" >
 
-<h3><span class="section-number-3">2.3</span> Was ist das Katalanische Spanisch?</h3>
+<h4><span class="section-number-4">1.3.2</span> Was ist das Katalanische Spanisch?</h4>
 <p>
 Die klare Antwort ist: <span class="underline">Kontaktdialekt zwischen Kastillianisch (oder</span>
 <span class="underline">Aragonesisch) mit Katalonischem Einfluss</span>.
@@ -138,13 +162,11 @@ Die klare Antwort ist: <span class="underline">Kontaktdialekt zwischen Kastillia
 -&gt; bis in die 90er Jahre selbst durch die Linguistik nicht als
 eigenständiger Dialekt betrachtet bzw. unerforscht. 
 </p>
-</section>
 
 </section>
-<section>
-<section id="sec-2-4" >
+<section id="sec-1-3-3" >
 
-<h3><span class="section-number-3">2.4</span> Gründe hierfür sind (u.A):</h3>
+<h4><span class="section-number-4">1.3.3</span> Warum?</h4>
 <p class="fragment highlight-blue">
 -&gt; <b>Wirkung</b> der <span class="underline">franquistischen Sprachplanung</span> (keine Einschulung in Catalan):
 weniger Salienz des Katalanischen Spanischen.
@@ -155,9 +177,9 @@ die korrekte Variante rationalisiert.
 </p>
 
 </section>
-<section id="sec-2-4-1" >
+<section id="sec-1-3-4" >
 
-<h4><span class="section-number-4">2.4.1</span> Beispiel: Philologen über Katalanisch-Spanisch</h4>
+<h4><span class="section-number-4">1.3.4</span> Beispiel: Philologen über Katalanisch-Spanisch</h4>
 <p>
 -&gt;  "<i>Die katalanische Aussprache von Kastillianisch ist eine Verstellung der Diction</i>" Badia (1969)
 </p>
@@ -167,9 +189,9 @@ die korrekte Variante rationalisiert.
 </p>
 
 </section>
-<section id="sec-2-4-2"  data-background="white">
+<section id="sec-1-3-5"  data-background="white">
 
-<h4><span class="section-number-4">2.4.2</span> Beispiel franquistischer Propaganda</h4>
+<h4><span class="section-number-4">1.3.5</span> Beispiel franquistischer Propaganda</h4>
 <img src="./images/caballero.jpg" alt="caballero.jpg" />
 
 <aside class="notes">
@@ -181,9 +203,9 @@ Das ist patriotisch zu sein. Lang lebe Spanien die Disziplin und die Cervantes's
 </aside>
 
 </section>
-<section id="sec-2-4-3" >
+<section id="sec-1-3-6" >
 
-<h4><span class="section-number-4">2.4.3</span> Veränderung der Einstellungen</h4>
+<h4><span class="section-number-4">1.3.6</span> Veränderung der Einstellungen</h4>
 <p>
 Der Umbruch mit dieser Situation vollzieht sich, in dem angenommen wird, dass Kataloner nicht
 Kastillianisch sondern Standard Spanisch sprechen. 
@@ -196,43 +218,51 @@ Dazu Robert E. Vann (2002)
 </p>
 </section>
 
-</section>
-<section id="sec-3" >
 
-<h2><span class="section-number-2">3</span> Demographie</h2>
+</section>
+<section id="sec-2" >
+
+<h2><span class="section-number-2">2</span> Demographie</h2>
 </section>
 <section>
-<section id="sec-3-1" >
+<section id="sec-2-1" >
 
-<h3><span class="section-number-3">3.1</span> Bevölkerung</h3>
+<h3><span class="section-number-3">2.1</span> Bevölkerung</h3>
+<p>
+Alle Daten entnommen aus:
+</p>
+<pre  class="example">
+http://www.bcn.cat/estadistica/catala/
+</pre>
+
 </section>
-<section id="sec-3-1-1"  data-background="white">
+<section id="sec-2-1-1"  data-background="white">
 
-<h4><span class="section-number-4">3.1.1</span> Einwohnerzahl</h4>
+<h4><span class="section-number-4">2.1.1</span> Einwohnerzahl</h4>
 <img src="./images/einwohner.png" alt="einwohner.png" />
 
 </section>
-<section id="sec-3-1-2"  data-background="white">
+<section id="sec-2-1-2"  data-background="white">
 
-<h4><span class="section-number-4">3.1.2</span> Entwicklung der Bevölkerung</h4>
+<h4><span class="section-number-4">2.1.2</span> Entwicklung der Bevölkerung</h4>
 <img src="./images/nationalitat.png" alt="nationalitat.png" />
 
 </section>
-<section id="sec-3-1-3"  data-background="white">
+<section id="sec-2-1-3"  data-background="white">
 
-<h4><span class="section-number-4">3.1.3</span> Migration</h4>
+<h4><span class="section-number-4">2.1.3</span> Migration</h4>
 <img src="./images/migrationsbewegungen.png" alt="migrationsbewegungen.png" />
 
 </section>
-<section id="sec-3-1-4"  data-background="white">
+<section id="sec-2-1-4"  data-background="white">
 
-<h4><span class="section-number-4">3.1.4</span> Bevölkerung nach Geburtsort</h4>
+<h4><span class="section-number-4">2.1.4</span> Bevölkerung nach Geburtsort</h4>
 <img src="./images/geburtsort.png" alt="geburtsort.png" />
 
 </section>
-<section id="sec-3-1-5" >
+<section id="sec-2-1-5" >
 
-<h4><span class="section-number-4">3.1.5</span> Kenntnisse des Katalanischen in Barcelona</h4>
+<h4><span class="section-number-4">2.1.5</span> Kenntnisse des Katalanischen in Barcelona</h4>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -325,36 +355,43 @@ Dazu Robert E. Vann (2002)
 </table>
 </section>
 
-</section>
-<section id="sec-4" >
 
-<h2><span class="section-number-2">4</span> Wichtigste Merkmale</h2>
+</section>
+<section id="sec-3" >
+
+<h2><span class="section-number-2">3</span> Wichtigste Merkmale</h2>
 </section>
 <section>
-<section id="sec-4-1"  data-background="white">
+<section id="sec-3-1"  data-background="white">
 
-<h3><span class="section-number-3">4.1</span> Phonologie</h3>
+<h3><span class="section-number-3">3.1</span> Phonologie</h3>
 <img src="./images/phonologie.jpg" alt="phonologie.jpg" />
-</section>
 
+<p>
+Robert E. Vann (2002)
+</p>
+</section>
 </section>
 <section>
-<section id="sec-4-2" >
+<section id="sec-3-2" >
 
-<h3><span class="section-number-3">4.2</span> Lexik</h3>
+<h3><span class="section-number-3">3.2</span> Lexik (einige Beispiele)</h3>
 <ul class="org-ul">
-<li>Entlehnungen (lexikalischer Transfer)
-</li>
-<li>"Calque"
+<li>Entlehnungen (lexikalischer Transfer) und "Calques"
 </li>
 <li>semantischer Transfer
 </li>
 </ul>
 
 </section>
-<section id="sec-4-2-1" >
+<section id="sec-3-2-1" >
 
-<h4><span class="section-number-4">4.2.1</span> Entlehnungen</h4>
+<h4><span class="section-number-4">3.2.1</span> Entlehnungen und "Calques"</h4>
+<ul class="org-ul">
+<li>Entlehnungen
+</li>
+</ul>
+
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -362,53 +399,71 @@ Dazu Robert E. Vann (2002)
 <col  class="left" />
 
 <col  class="left" />
+
+<col  class="left" />
 </colgroup>
 <tbody>
 <tr>
 <td class="left">&#xa0;</td>
-<td class="left">Deutsch</td>
+<td class="left"><b>Spanish</b></td>
+<td class="left"><b>Deutsch</b></td>
 </tr>
 
 <tr>
-<td class="left"><i>desenvolupar</i> vs es. <i>desenrrollar</i></td>
+<td class="left"><i>desenvolupar</i></td>
+<td class="left"><i>desenrrollar</i></td>
 <td class="left">auswickeln</td>
 </tr>
 
 <tr>
-<td class="left"><i>parlar</i>  vs es. <i>hablar</i></td>
+<td class="left"><i>parlar</i></td>
+<td class="left"><i>hablar</i></td>
 <td class="left">sprechen</td>
 </tr>
 
 <tr>
-<td class="left"><i>espardeñas</i>  vs es. <i>alpargatas</i></td>
+<td class="left"><i>espardeñas</i></td>
+<td class="left"><i>alpargatas</i></td>
 <td class="left">Espadrilles</td>
 </tr>
 
 <tr>
-<td class="left"><i>esplai</i></td>
-<td class="left">Pionier-zentrum</td>
+<td class="left"><i>conversa</i></td>
+<td class="left"><i>conversación</i></td>
+<td class="left">Gespräch</td>
 </tr>
 
 <tr>
-<td class="left"><i>conversa</i> vs es. <i>conversación</i></td>
-<td class="left">Gespräch</td>
+<td class="left"><i>esplai</i></td>
+<td class="left">&#xa0;</td>
+<td class="left">Pionier-zentrum</td>
 </tr>
 </tbody>
 </table>
 
 <p>
--&gt; "<i>hacen faelr los interesees comunes a todo el proletariado</i>
-<i>independientemente de la nacionalidad y que en las diferentes fades del desenvolupamiento</i>"
+-&gt; "<i>hacen faelr (sic!) los intereses comunes a todo el proletariado</i>
+<i>independientemente de la nacionalidad y que en <b>las diferentes fases del desenvolupamiento</b></i>"
 </p>
+
+<aside class="notes">
+<p>
+Beispiel aus einem schriftlichen Corpus des Spanischen (8 mil. Tokens)
+Die catalanisch-sprächige Bevölkerung macht fast 1/4 der gesamten spanischen Bevölkerung aus.
+</p>
+</aside>
 
 <p>
 -&gt; "<i>De ahí nos hemos ido Raquel y Jose con los nenes al esplai</i>"
 </p>
 
 </section>
-<section id="sec-4-2-2" >
+<section>
 
-<h4><span class="section-number-4">4.2.2</span> Calques (Strukturübertragung aus der besser beherrschten Sprache)</h4>
+<p>
+"Calques" (Konstruktionsübertragung aus der besser beherrschten Sprache)
+</p>
+
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -416,35 +471,48 @@ Dazu Robert E. Vann (2002)
 <col  class="left" />
 
 <col  class="left" />
+
+<col  class="left" />
 </colgroup>
 <tbody>
 <tr>
 <td class="left">&#xa0;</td>
+<td class="left">Spanisch</td>
 <td class="left">Deutsch</td>
 </tr>
 
 <tr>
-<td class="left"><i>ahí hay</i> vs es. <i>hay</i></td>
+<td class="left"><i>ahí hay</i></td>
+<td class="left"><i>hay</i></td>
 <td class="left">es gibt</td>
 </tr>
 
 <tr>
-<td class="left"><i>tiene a ver</i> vs es. <i>tiene que ver</i></td>
+<td class="left"><i>tiene a ver</i></td>
+<td class="left"><i>tiene que ver</i></td>
 <td class="left">es hat zu tun mit&#x2026;</td>
 </tr>
 
 <tr>
-<td class="left">&#xa0;</td>
-<td class="left">&#xa0;</td>
+<td class="left"><i>cierra la luz</i></td>
+<td class="left"><i>apaga la luz</i></td>
+<td class="left">mach das Licht aus</td>
 </tr>
 </tbody>
 </table>
-</section>
 
 </section>
-<section id="sec-5" >
+<section id="sec-3-2-2" >
 
-<h2><span class="section-number-2">5</span> Studie zur pragmatischen Interferenz (Robert E. Vann.)</h2>
+<h4><span class="section-number-4">3.2.2</span> semantischer Transfer</h4>
+</section>
+
+
+
+</section>
+<section id="sec-4" >
+
+<h2><span class="section-number-2">4</span> Studie zur pragmatischen Interferenz (Robert E. Vann.)</h2>
 </section>
 </div>
 </div>
@@ -480,8 +548,7 @@ dependencies: [
  { src: './plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
  { src: './plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
  { src: './plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
- { src: './plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
- { src: './plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
+{ src: './plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
 ]
 });
 </script>
