--- a/catalan_spanish.html
+++ b/catalan_spanish.html
@@ -3,8 +3,8 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<title>Barcelona Spanisch</title>
-<meta name="author" content="(Dozent: Uli Reich)"/>
+<title>Spanisch in Barcelona</title>
+<meta name="author" content="(Referent: Enrique Manjavacas | Dozent: Uli Reich)"/>
 
 <link rel="stylesheet" href="./css/reveal.min.css"/>
 <link rel="stylesheet" href="./css/theme/beige.css" id="theme"/>
@@ -25,9 +25,9 @@
 <div class="reveal">
 <div class="slides">
 <section>
-<h1>Barcelona Spanisch</h1>
-<h2>Dozent: Uli Reich</h2>
-<h2><a href="mailto:Urbane Prozesse">Urbane Prozesse</a></h2>
+<h1>Spanisch in Barcelona</h1>
+<h2>Referent: Enrique Manjavacas | Dozent: Uli Reich</h2>
+<h2><a href="mailto:http://emanjavacas.github.io/slides/">http://emanjavacas.github.io/slides/</a></h2>
 <h2></h2></section>
 <section>
 <h2>Table of Contents</h2><ul>
@@ -40,9 +40,6 @@
 <li>
 <a href="#sec-3">Wichtigste Merkmale</a>
 </li>
-<li>
-<a href="#sec-4">Studie zur pragmatischen Interferenz (Robert E. Vann.)</a>
-</li>
 </ul>
 </section>
 
@@ -54,30 +51,30 @@
 <section id="sec-1-1" >
 
 <h3><span class="section-number-3">1.1</span> Hintergrund</h3>
-<p class="fragment fade-in">
+<p class="fragment role-in">
 -&gt; unoffiziele Referenda 2009-2011 (nidriege Wahlbeteiligung)
 </p>
 
-<p class="fragment fade-in">
+<p class="fragment role-in">
 -&gt; Demonstrationen 11. September - Diada
 </p>
 
-<p class="fragment fade-in">
+<p class="fragment role-in">
 -&gt; 5. November 2012: Vorgezogene Neuwahl
 </p>
 
-<p class="fragment fade-in">
+<p class="fragment role-in">
 -&gt; 23. Januar 2013: "Erklärung der Souveranität" - verbindliches Referendum vorgesehen.
 </p>
 
-<p class="fragment fade-in">
+<p class="fragment role-in">
 -&gt; 25. März 2014: Verfassungsgericht erklärt es null.
 </p>
 
-<p class="fragment fade-in">
+<p class="fragment role-in">
 Mehr Info unter: 
 </p>
-<p class="fragment fade-in">
+<p class="fragment role-in">
 <a href="http:en.wikipedia.org/wiki/Catalan_self-determination_referendum">Referendum um die Unabhängigkeit</a>
 </p>
 </section>
@@ -377,7 +374,9 @@ Robert E. Vann (2002)
 
 <h3><span class="section-number-3">3.2</span> Lexik (einige Beispiele)</h3>
 <ul class="org-ul">
-<li>Entlehnungen (lexikalischer Transfer) und "Calques"
+<li>Entlehnungen (lexikalischer Transfer) 
+</li>
+<li>"Calques"
 </li>
 <li>semantischer Transfer
 </li>
@@ -386,12 +385,7 @@ Robert E. Vann (2002)
 </section>
 <section id="sec-3-2-1" >
 
-<h4><span class="section-number-4">3.2.1</span> Entlehnungen und "Calques"</h4>
-<ul class="org-ul">
-<li>Entlehnungen
-</li>
-</ul>
-
+<h4><span class="section-number-4">3.2.1</span> Entlehnungen</h4>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -441,9 +435,12 @@ Robert E. Vann (2002)
 </tbody>
 </table>
 
-<p>
--&gt; "<i>hacen faelr (sic!) los intereses comunes a todo el proletariado</i>
-<i>independientemente de la nacionalidad y que en <b>las diferentes fases del desenvolupamiento</b></i>"
+<p class="fragment role-in">
+-&gt; "<i>hacen valer los intereses comunes a todo el proletariado independientemente de la nacionalidad y que en <b>las diferentes fases del desenvolupamiento</b></i>"
+</p>
+
+<p class="fragment role-in">
+-&gt; "<i>De ahí nos hemos ido Raquel y Jose con los nenes al esplai</i>"
 </p>
 
 <aside class="notes">
@@ -453,17 +450,11 @@ Die catalanisch-sprächige Bevölkerung macht fast 1/4 der gesamten spanischen B
 </p>
 </aside>
 
-<p>
--&gt; "<i>De ahí nos hemos ido Raquel y Jose con los nenes al esplai</i>"
-</p>
 
 </section>
-<section>
+<section id="sec-3-2-2" >
 
-<p>
-"Calques" (Konstruktionsübertragung aus der besser beherrschten Sprache)
-</p>
-
+<h4><span class="section-number-4">3.2.2</span> "Calques" (Konstruktionsübertragung aus der besser beherrschten Sprache)</h4>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -477,8 +468,8 @@ Die catalanisch-sprächige Bevölkerung macht fast 1/4 der gesamten spanischen B
 <tbody>
 <tr>
 <td class="left">&#xa0;</td>
-<td class="left">Spanisch</td>
-<td class="left">Deutsch</td>
+<td class="left"><b>Spanisch</b></td>
+<td class="left"><b>Deutsch</b></td>
 </tr>
 
 <tr>
@@ -502,17 +493,125 @@ Die catalanisch-sprächige Bevölkerung macht fast 1/4 der gesamten spanischen B
 </table>
 
 </section>
-<section id="sec-3-2-2" >
+<section id="sec-3-2-3" >
 
-<h4><span class="section-number-4">3.2.2</span> semantischer Transfer</h4>
+<h4><span class="section-number-4">3.2.3</span> semantischer Transfer (existierendes Wort wird mit übertragener Bedeutung verwendet)</h4>
+<table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
+
+
+<colgroup>
+<col  class="left" />
+
+<col  class="left" />
+
+<col  class="left" />
+</colgroup>
+<tbody>
+<tr>
+<td class="left">&#xa0;</td>
+<td class="left"><b>Spanisch</b></td>
+<td class="left"><b>Deutsch</b></td>
+</tr>
+
+<tr>
+<td class="left"><i>respectar</i></td>
+<td class="left"><i>respetar</i></td>
+<td class="left">respektieren</td>
+</tr>
+
+<tr>
+<td class="left"><i>resta</i></td>
+<td class="left"><i>resto</i></td>
+<td class="left">Rest</td>
+</tr>
+
+<tr>
+<td class="left"><i>pero</i></td>
+<td class="left">-</td>
+<td class="left">aber (nachgestellt)</td>
+</tr>
+
+<tr>
+<td class="left"><i>entonces</i></td>
+<td class="left"><i>asi que</i></td>
+<td class="left">explikatives <i>also</i></td>
+</tr>
+</tbody>
+</table>
+
+<p class="fragment role-in">
+-&gt; "<i>De España yo ten-, yo <b>respecto</b> mucho&#x2026;</i>"
+</p>
+
+<p class="fragment role-in">
+-&gt; "<i>En la <b>resta</b> &#x2026; en la, bueno, en el resto de España no se habla catalán.</i>"
+</p>
+
+<p class="fragment role-in">
+-&gt; "<i>Porque es una zona de inmigrantes, <b>entonces</b> hay&#x2026; [&#x2026;] gitanos.</i>"
+</p>
+
+<p class="fragment role-in">
+-&gt; "<i>Porque estamos en España, aunque no lo quiero aceptar, <b>pero</b>.</i>"
+</p>
 </section>
 
+</section>
+<section>
+<section id="sec-3-3" >
 
+<h3><span class="section-number-3">3.3</span> (interessanterere) Beispiele</h3>
+</section>
+<section id="sec-3-3-1" >
+
+<h4><span class="section-number-4">3.3.1</span> <b>Partitiva (Grammatikalisierung?)</b>:</h4>
+<p class="fragment role-in">
+-&gt; "<i>Porque es una zona de inmigrantes, entonces hay &#x2026; <b>de gitanos</b>.</i>"
+</p>
+
+<aside class="notes">
+<p>
+-*normal* in Ausdruecken wie 'hubo de todo eso'
+-*regional* vor Saetze mit Verben, die keine Praep rektieren.
+</p>
+</aside>
 
 </section>
-<section id="sec-4" >
+<section id="sec-3-3-2" >
 
-<h2><span class="section-number-2">4</span> Studie zur pragmatischen Interferenz (Robert E. Vann.)</h2>
+<h4><span class="section-number-4">3.3.2</span> <span class="underline">de</span> <b>als 'verbal transition' (Grammatikalisierung?)</b>:</h4>
+<p class="fragment role-in">
+-&gt; "<i>Prefirieron <b>de</b> no liarla con dos idiomas.</i>"
+</p>
+
+<aside class="notes">
+<p>
+mit vorfalle in anderen spanischen Dialekten
+</p>
+</aside>
+
+</section>
+<section id="sec-3-3-3" >
+
+<h4><span class="section-number-4">3.3.3</span> <b>redundante Verneinung (Intensivierung?)</b>:</h4>
+<p class="fragment role-in">
+-&gt; "<i>Si votabas CiU, <b>tampoco no</b> avanzaban</i>"
+</p>
+
+<aside class="notes">
+<p>
+-mit vorfalle in anderen spanischen Dialekten
+-Seco (1986) haelt es fuer falsch
+</p>
+</aside>
+</section>
+
+</section>
+<section>
+<section id="sec-3-4" >
+
+<h3><span class="section-number-3">3.4</span> Pragmatik (Studie von Robert E. Vann)</h3>
+</section>
 </section>
 </div>
 </div>
@@ -527,7 +626,7 @@ Reveal.initialize({
 
 controls: true,
 progress: true,
-history: false,
+history: true,
 center: true,
 slideNumber: true,
 rollingLinks: true,
@@ -548,7 +647,7 @@ dependencies: [
  { src: './plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
  { src: './plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
  { src: './plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-{ src: './plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
+ { src: './plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
 ]
 });
 </script>
